--- a/client/src/components/dateRecord/DateRecord.module.css
+++ b/client/src/components/dateRecord/DateRecord.module.css
@@ -3,8 +3,16 @@
   overflow: hidden;
 }
 
+.dateCnt{
+  /* display: table-cell; */
+  vertical-align: middle;
+  font-size: 1.2rem;
+  font-weight: bold;
+  padding-left: 10px;
+}
+
 .title {
-  display: table-cell;
+  /* display: table-cell; */
   vertical-align: middle;
   font-size: 14px;
   font-weight: bold;
