date numbering 클릭시 지도 re-bound 기능 추가

--- a/client/src/components/dateRecord/DateRecord.module.css
+++ b/client/src/components/dateRecord/DateRecord.module.css
@@ -11,6 +11,15 @@
   padding-left: 10px;
 }
 
+.spanDateCnt{
+  cursor: pointer;
+  transition: color 0.2s ease-in-out;
+}
+
+.spanDateCnt:hover{
+  color: #d485d9
+}
+
 .title {
   /* display: table-cell; */
   vertical-align: middle;
