--- a/client/src/components/Signin.module.css
+++ b/client/src/components/Signin.module.css
@@ -6,12 +6,12 @@
   text-align: center;
   font-size: 30px;
   font-weight: bold;
-  color: #642828;
+  color: var(--blueberry);
   text-transform: uppercase;
-  margin-top: 80px;
 }
 
 .signin_subtitle {
+  color: var(--malibu);
   text-align: center;
   font-size: 20px;
   font-weight: bold;
@@ -19,20 +19,21 @@
 }
 
 .signin_underline {
-  width: 200px;
+  width: 220px;
   height: 6px;
   margin-right: auto;
   margin-left: auto;
   margin-top: 20px;
-  background: linear-gradient(to right, #803b32, #ddb49b);
+  background: linear-gradient(to right, var(--blueberry), var(--malibu));
 }
 
 .signin_contents {
-  margin-top: 50px;
+  /* margin-top: 50px; */
   background-color: #f3f7f8;
   margin-left: auto;
   margin-right: auto;
-  width: 800px;
+  justify-content: center;
+  /* width: 800px; */
 }
 
 .signin_bg {
