--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,7 +5,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-
 @media (max-width: 768px){
   .ant-page-header-heading-extra{
     float: right;
@@ -23,7 +22,11 @@ body {
   padding: 4px 12px;
 }
 
-
+.ant-table-thead > tr > th,
+.ant-table-tbody > tr > td,
+.ant-table tfoot > tr > th, .ant-table tfoot > tr > td {
+  padding-right: 0px;
+}
 
 :root{
   --blueberry: #6D71F9;
