모바일 화면 수평 스크롤 생성으로 body 전체가 움직이는 현상 개선

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,7 +3,16 @@ body {
   font-family: 'Roboto' sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  max-width: 100%;
+  overflow-x: hidden;
 }
+
+html {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
+
 
 .FilterOutlinedContainer>button.ant-btn{
   border:initial;
